--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -61,7 +61,6 @@
   "peerDependencies": {
     "@curvenote/components": "^0.3.4",
     "@curvenote/runtime": "^0.2.9",
-    "@curvenote/schema": "0.12.17",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -86,7 +85,7 @@
   "devDependencies": {
     "@curvenote/components": "^0.3.4",
     "@curvenote/runtime": "^0.2.9",
-    "@curvenote/schema": "0.12.17",
+    "@curvenote/schema": "file:../schema",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
