--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -45,6 +45,7 @@
     "katex": "^0.15.2",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
+    "mermaid": "^9.1.7",
     "prosemirror-autocomplete": "0.4.2",
     "prosemirror-codemark": "^0.4.1",
     "prosemirror-commands": "^1.3.0",
@@ -85,7 +86,7 @@
   "devDependencies": {
     "@curvenote/components": "^0.3.4",
     "@curvenote/runtime": "^0.2.9",
-    "@curvenote/schema": "file:../schema",
+    "@curvenote/schema": "^0.12.17",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -101,6 +102,7 @@
     "@types/katex": "^0.14.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.isequal": "^4.5.6",
+    "@types/mermaid": "^9.1.0",
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
