--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -86,7 +86,7 @@
   "devDependencies": {
     "@curvenote/components": "^0.3.4",
     "@curvenote/runtime": "^0.2.9",
-    "@curvenote/schema": "^0.12.17",
+    "@curvenote/schema": "file:../out/schema.tgz",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
