--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -62,6 +62,7 @@
   "peerDependencies": {
     "@curvenote/components": "^0.3.4",
     "@curvenote/runtime": "^0.2.9",
+    "@curvenote/schema": "file:../out/schema.tgz",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
