--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -34,14 +34,22 @@
     "test:clear": "jest --clearCache",
     "start": "webpack serve --liveReload --open --config webpack.dev.js",
     "lint": "eslint \"src/**/*.ts\" -c .eslintrc.js",
+    "lint:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\" -c .eslintrc.js",
     "lint:format": "prettier --check \"src/**/*.tsx\" \"src/**/*.ts\"",
     "dev": "tsc -w --preserveWatchOutput -p ."
   },
   "dependencies": {
     "@curvenote/emoji": "1.0.1",
     "@curvenote/prosemirror-utils": "^1.0.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
+    "@mui/styles": "^5.11.9",
+    "@mui/x-date-pickers": "^5.0.20",
     "@reduxjs/toolkit": "^1.8.3",
     "codemirror": "5.65.0",
+    "date-fns": "^2.29.3",
     "katex": "^0.15.2",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
@@ -63,12 +71,7 @@
     "@curvenote/components": "^0.3.4",
     "@curvenote/runtime": "^0.2.9",
     "@curvenote/schema": "file:../out/schema.tgz",
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/pickers": "^3.3.10",
     "classnames": "^2.3.1",
-    "date-fns": "^2.25.0",
     "fuse.js": "^6.4.6",
     "prosemirror-collab": "^1.3.0",
     "prosemirror-model": "^1.18.1",
@@ -88,10 +91,6 @@
     "@curvenote/components": "^0.3.4",
     "@curvenote/runtime": "^0.2.9",
     "@curvenote/schema": "file:../out/schema.tgz",
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/pickers": "^3.3.10",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.14.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -113,7 +112,6 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "cypress": "^10.2.0",
-    "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
     "eslint": "^8.21.0",
     "eslint-config-curvenote": "*",
